--- a/contacto.html
+++ b/contacto.html
@@ -1,54 +1,82 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./contacto-estilos.css">
+ 
 </head>
 <body>
-    <header>
-        <h1>AS Impresiones 3D</h1>
-        <nav class="nav">
-            <ul>
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
-                <li><a href="./horarios.html">Horarios de atención</a></li>
-                <li><a href="./productos.html">Productos</a></li>
+<header>
+    <!-- Navbar de Bootstrap -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="./index.html">SN GAMERS</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./productos.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./horarios.html">Horarios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./quienes-somos.html">Quienes Somos</a>
+                </li>
             </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="contacto" class="container mt-5">
-            <h2 class="tituloContacto">Consulta de Productos y Servicios en 3D</h2>
-            <form class="formulario">
-                <h3>Dejanos tu consulta</h3>
-                <div class="row g-3">
-                    <div class="col">
-                        <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre">
-                    </div>
-                    <div class="col">
-                        <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido">
-                    </div>
-                    <div class="col">
-                        <input type="email" class="form-control" placeholder="Email" aria-label="Email">
-                    </div>
+        </div>
+    </nav>
+</header>
+<section id="contacto" class="container mt-5">
+        <h2 class="tituloContacto">Consulta de Productos y Servicios Técnico</h2>
+        <form class="formulario" id="consultaForm">
+            <h3>Deja tu consulta:</h3>
+            <div class="row g-3">
+                <div class="col">
+                    <input type="text" class="form-control" placeholder="Nombre" aria-label="Nombre" id="nombre">
                 </div>
-                <div class="form-floating mt-3">
-                    <textarea class="form-control" placeholder="Deja un comentario aquí" id="floatingTextarea"></textarea>
-                    <label for="floatingTextarea" class="textoArea">Comentarios</label>
+                <div class="col">
+                    <input type="text" class="form-control" placeholder="Apellido" aria-label="Apellido" id="apellido">
                 </div>
-                <div class="d-grid gap-2 mt-3">
-                    <button class="btn btn-primary" type="submit">Enviar consulta</button>
-                    <button class="btn btn-secondary" type="reset">Resetear campos</button>
+                <div class="col">
+                    <input type="email" class="form-control" placeholder="Email" aria-label="Email" id="email">
                 </div>
-            </form>
-        </section>
-    </main>
-    <footer class="contacto-footer">
-        <p>AS Impresiones en 3D. Todos los derechos reservados.</p>
+            </div>
+            <div class="form-floating mt-3">
+                <textarea class="form-control" placeholder="Deja un comentario aquí" id="comentario"></textarea>
+                <label for="comentario" class="textoArea"></label>
+            </div>
+            <div class="d-grid gap-2 mt-3">
+                <button class="btn btn-primary" type="button" onclick="enviarConsulta()">Enviar consulta</button>
+                <button class="btn btn-secondary" type="reset">Resetear campos</button>
+            </div>
+        </form>
+    </section>
+
+    <footer>
+
+        <div class="social-icons">
+            <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+            <a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:info@sngamers.com"><i class="fas fa-envelope"></i></a>
+            <a href="https://wa.me/tunumerodetelefono" target="_blank"><i class="fab fa-whatsapp"></i></a>
+        </div>
+        <p class="textoFooter">Derechos reservados 2023 -  SN GAMERS</p>
     </footer>
+    <script src="javascript.js"></script>
 </body>
 </html>
