--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 </head>
 
 <body>
-    <header>
-        <!-- <h1>Bienvenidos a SN GAMERS</h1> -->
-    </header>
-
+   <header>
     <!-- Navbar de Bootstrap -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="./index.html">SN GAMERS</a>
@@ -39,9 +36,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./quienes-somos.html">Quienes Somos</a>
                 </li>
+                <li>
+                    <div class="containerIngresa">
+                    <button id="ingresar">Verifica tu edad</button>
+                    </div>
+                </li>
             </ul>
         </div>
     </nav>
+</header>
 
     <!-- Carrusel de Bootstrap -->
     <div class="container">
@@ -72,6 +75,7 @@
         </div>
     </div>
 
+<section>
     <h2 class="titulo2">Ultimos ingresos!</h2>
     <!-- Tarjetas de productos -->
     <div class="containerCards">
@@ -156,9 +160,8 @@
             </div>
         </div>
     </div>
-
+</section>
     <footer>
-        
         <div class="social-icons">
             <a href="http://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="http://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -167,8 +170,7 @@
         </div>
         <p class="textoFooter">Derechos reservados 2023 -  SN GAMERS</p>
     </footer>
-      
-
+    <script src ="javascript.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
